// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-email Logged In Url Params Checkout email provided 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <div class="email-preview">
      <div class="email-preview__info">
        <sc-avatar image="" initials=""></sc-avatar>
        <div class="email-preview__text">
          <div class="email-preview__name"></div>
          <div class="email-preview__email"></div>
        </div>
      </div>
      <sc-dropdown placement="bottom-end">
        <sc-button slot="trigger" type="text">
          <sc-icon aria-label="Account options" name="chevron-down"></sc-icon>
        </sc-button>
        <sc-menu>
          <sc-menu-item>
            <sc-icon name="log-out" slot="prefix"></sc-icon>
            Logout
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </div>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email Logged In Url Params Customer and Checkout email provided 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <div class="email-preview">
      <div class="email-preview__info">
        <sc-avatar image="" initials=""></sc-avatar>
        <div class="email-preview__text">
          <div class="email-preview__name"></div>
          <div class="email-preview__email"></div>
        </div>
      </div>
      <sc-dropdown placement="bottom-end">
        <sc-button slot="trigger" type="text">
          <sc-icon aria-label="Account options" name="chevron-down"></sc-icon>
        </sc-button>
        <sc-menu>
          <sc-menu-item>
            <sc-icon name="log-out" slot="prefix"></sc-icon>
            Logout
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </div>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email Logged In Url Params Customer email provided 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <div class="email-preview">
      <div class="email-preview__info">
        <sc-avatar image="" initials=""></sc-avatar>
        <div class="email-preview__text">
          <div class="email-preview__name"></div>
          <div class="email-preview__email"></div>
        </div>
      </div>
      <sc-dropdown placement="bottom-end">
        <sc-button slot="trigger" type="text">
          <sc-icon aria-label="Account options" name="chevron-down"></sc-icon>
        </sc-button>
        <sc-menu>
          <sc-menu-item>
            <sc-icon name="log-out" slot="prefix"></sc-icon>
            Logout
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </div>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email Logged In Without Url Params Checkout email provided 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <div class="email-preview">
      <div class="email-preview__info">
        <sc-avatar image="" initials=""></sc-avatar>
        <div class="email-preview__text">
          <div class="email-preview__name"></div>
          <div class="email-preview__email"></div>
        </div>
      </div>
      <sc-dropdown placement="bottom-end">
        <sc-button slot="trigger" type="text">
          <sc-icon aria-label="Account options" name="chevron-down"></sc-icon>
        </sc-button>
        <sc-menu>
          <sc-menu-item>
            <sc-icon name="log-out" slot="prefix"></sc-icon>
            Logout
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </div>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email Logged In Without Url Params Customer and Checkout email provided 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <div class="email-preview">
      <div class="email-preview__info">
        <sc-avatar image="" initials=""></sc-avatar>
        <div class="email-preview__text">
          <div class="email-preview__name"></div>
          <div class="email-preview__email"></div>
        </div>
      </div>
      <sc-dropdown placement="bottom-end">
        <sc-button slot="trigger" type="text">
          <sc-icon aria-label="Account options" name="chevron-down"></sc-icon>
        </sc-button>
        <sc-menu>
          <sc-menu-item>
            <sc-icon name="log-out" slot="prefix"></sc-icon>
            Logout
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </div>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email Logged In Without Url Params Customer email provided 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <div class="email-preview">
      <div class="email-preview__info">
        <sc-avatar image="" initials=""></sc-avatar>
        <div class="email-preview__text">
          <div class="email-preview__name"></div>
          <div class="email-preview__email"></div>
        </div>
      </div>
      <sc-dropdown placement="bottom-end">
        <sc-button slot="trigger" type="text">
          <sc-icon aria-label="Account options" name="chevron-down"></sc-icon>
        </sc-button>
        <sc-menu>
          <sc-menu-item>
            <sc-icon name="log-out" slot="prefix"></sc-icon>
            Logout
          </sc-menu-item>
        </sc-menu>
      </sc-dropdown>
    </div>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email Logged Out Checkout email provided with URL Params 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="email" exportparts="base, input, form-control, label, help-text, prefix, suffix" help="" name="email" required="" type="email" value="UrlEmail"></sc-input>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email Logged Out Checkout email provided without URL Params 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="email" exportparts="base, input, form-control, label, help-text, prefix, suffix" help="" name="email" required="" type="email" value="CheckoutEmail"></sc-input>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email Logged Out Customer and Checkout email provided with URL Params 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="email" exportparts="base, input, form-control, label, help-text, prefix, suffix" help="" name="email" required="" type="email" value="UrlEmail"></sc-input>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email Logged Out Customer and Checkout email provided without URL Params 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="email" exportparts="base, input, form-control, label, help-text, prefix, suffix" help="" name="email" required="" type="email" value="CheckoutEmail"></sc-input>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email Logged Out Customer email provided with URL Params 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="email" exportparts="base, input, form-control, label, help-text, prefix, suffix" help="" name="email" required="" type="email" value="UrlEmail"></sc-input>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email Logged Out Customer email provided without URL Params 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="email" exportparts="base, input, form-control, label, help-text, prefix, suffix" help="" name="email" required="" type="email" value="CustomerEmail"></sc-input>
  </mock:shadow-root>
</sc-customer-email>
`;
